# modeldna-cli

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
modeldna/: __init__.py  bases.py  cli.py  scan.py
tests/: test_scan.py
